######### 2014-3-22 ##########
alter table shop_memorule_composerule add column git_count int(11) NOT NULL;
######### 2014-3-1 ##########
alter table shop_comments_comment add replayer_id int(11) DEFAULT NULL;
alter table shop_comments_comment add column replay_at datetime DEFAULT NULL;
alter table shop_comments_comment ADD FOREIGN KEY (replayer_id) REFERENCES auth_user(id);
######### 2014-1-10 ##########
drop index purchase_id on shop_purchases_item;
alter table  shop_purchases_item add UNIQUE(purchase_id,product_id,sku_id);
drop index purchase_storage_id on shop_purchases_storageitem;
alter table shop_purchases_storageitem add UNIQUE(purchase_storage_id,product_id,sku_id);
######### 2014-1-2 ##########
alter table shop_purchases_item add column product_id int(11) default null;
alter table shop_purchases_item add column sku_id int(11) default null;
alter table shop_purchases_storageitem add column product_id int(11) default null;
alter table shop_purchases_storageitem add column sku_id int(11) default null;
alter table shop_purchases_relationship add column product_id int(11) default null;
alter table shop_purchases_relationship add column sku_id int(11) default null;
alter table shop_purchases_paymentitem add column product_id int(11) default null;
alter table shop_purchases_paymentitem add column sku_id int(11) default null;
######### 2013-12-25 ##########
alter table shop_items_product add column reduce_num int(11) NOT NULL;
alter table shop_items_productsku add column reduce_num int(11) NOT NULL;
######### 2013-12-25 ##########
alter table shop_items_product add column match_reason varchar(80) NOT NULL;
alter table shop_items_productsku add column match_reason varchar(80) NOT NULL;
######### 2013-11-27 ##########
alter table shop_purchases_payment add column origin_nos longtext NOT NULL;
######### 2013-11-27 ##########
alter table shop_items_item add column with_hold_quantity int(11) NOT NULL;