@@ -43,13 +43,13 @@ admin.site.register(BranchZone,BranchZoneAdmin)
 class LogisticOrderAdmin(admin.ModelAdmin):
     
     list_display = ('cus_oid','out_sid','weight','receiver_name','receiver_state','receiver_city',
-                    'receiver_mobile','receiver_phone','created','is_charged','sync_addr','status')
+                    'receiver_mobile','receiver_phone','weighted','created','is_charged','sync_addr','status')
     list_display_links = ('out_sid','cus_oid',)
 
     #date_hierarchy = 'created'
     #ordering = ['created_at']
     
-    list_filter = ('status','is_charged','sync_addr',('created',DateFieldListFilter))
+    list_filter = ('status','is_charged','sync_addr',('weighted',DateFieldListFilter),('created',DateFieldListFilter))
     search_fields = ['cus_oid','out_sid','receiver_name','receiver_mobile','receiver_phone']
 
 
